--- a/FileFlux/Pages/DownloadsPage.xaml
+++ b/FileFlux/Pages/DownloadsPage.xaml
@@ -24,7 +24,7 @@
 			<FontImageSource FontFamily="FAS" Size="64" Glyph="&#xf1c1;" Color="{DynamicResource PrimaryColor}" x:Key="FilePdfGlyph" />
 			<FontImageSource FontFamily="FAS" Size="64" Glyph="&#xf15c;" Color="{DynamicResource PrimaryColor}" x:Key="FileTextGlyph" />
 			<FontImageSource FontFamily="FAS" Size="18" Glyph="&#xf04c;" Color="{DynamicResource PrimaryColor}" x:Key="PauseGlyph" />
-			<FontImageSource FontFamily="FAS" Size="18" Glyph="&#xf04b;" Color="{DynamicResource PrimaryColor}" x:Key="ResumeGlyph" />			
+			<FontImageSource FontFamily="FAS" Size="18" Glyph="&#xf04b;" Color="{DynamicResource PrimaryColor}" x:Key="ResumeGlyph" />
 		</ResourceDictionary>
 		<local:FileSizeConverter x:Key="FileSizeConverter" />
 		<local:StatusConverter x:Key="StatusConverter" />
@@ -41,169 +41,123 @@
 			</ToolbarItem.IconImageSource>
 		</ToolbarItem>
 	</ContentPage.ToolbarItems>
-	<toolkit:DockLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" ShouldExpandLastChild="False">
-		<ScrollView BackgroundColor="Transparent" x:Name="DownloadsList" toolkit:DockLayout.DockPosition="None" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-			<ListView ItemsSource="{Binding Downloads}" BackgroundColor="Transparent" SelectionMode="None" CachingStrategy="RecycleElementAndDataTemplate" HorizontalOptions="StartAndExpand">
-				<ListView.ItemTemplate>
-					<DataTemplate x:DataType="model:Download">
-						<ViewCell>
-							<ViewCell.ContextActions>
-								<MenuItem Text="Pause" />
-								<MenuItem Text="Cancel"/>
-							</ViewCell.ContextActions>
-							<Grid RowSpacing="16" ColumnSpacing="16" Padding="16">
-								<Grid.Behaviors>
-									<toolkit:AnimationBehavior>
-										<toolkit:AnimationBehavior.AnimationType>
-											<toolkit:FadeAnimation/>
-										</toolkit:AnimationBehavior.AnimationType>
-									</toolkit:AnimationBehavior>
-								</Grid.Behaviors>
-								<Grid.RowDefinitions>
-									<RowDefinition Height="Auto" />
-									<RowDefinition Height="*" />
-									<RowDefinition Height="Auto" />
-								</Grid.RowDefinitions>
-								<Grid.ColumnDefinitions>
-									<ColumnDefinition Width="Auto"/>
-									<ColumnDefinition Width="*" />
-									<ColumnDefinition Width="Auto"/>
-								</Grid.ColumnDefinitions>
-								<Image Grid.Column="0" Source="{StaticResource Key=FileGenericGlph}">
-									<Image.Triggers>
-										<DataTrigger Binding="{Binding Type}" TargetType="Image" Value="audio">
-											<Setter Property="Source" Value="{StaticResource Key='FileAudioGlyph'}" />
-										</DataTrigger>
-										<DataTrigger Binding="{Binding Type}" TargetType="Image" Value="image">
-											<Setter Property="Source" Value="{StaticResource Key=FileImageGlyph}" />
-										</DataTrigger>
-										<DataTrigger Binding="{Binding Type}" TargetType="Image" Value="video">
-											<Setter Property="Source" Value="{StaticResource Key=FileVideoGlyph}" />
-										</DataTrigger>
-										<DataTrigger Binding="{Binding Type}" TargetType="Image" Value="text">
-											<Setter Property="Source" Value="{StaticResource Key=FileTextGlyph}" />
-										</DataTrigger>
-									</Image.Triggers>
-								</Image>
-								<VerticalStackLayout Grid.Column="1" HorizontalOptions="Start">
-									<Label Text="{Binding FileName}" FontSize="Small" />
-									<Label Text="{Binding Status, Converter={StaticResource StatusConverter}, StringFormat='Status: {0}'}" FontSize="Micro">
-										<Label.Triggers>
-											<DataTrigger TargetType="Label" Binding="{Binding Status}" Value="{x:Static model:FileDownloadStatuses.Failed}">
-												<Setter Property="TextColor" Value="{AppThemeBinding Light=DarkRed, Dark=Red}"/>
-											</DataTrigger>
-											<DataTrigger TargetType="Label" Binding="{Binding Status}" Value="{x:Static model:FileDownloadStatuses.Completed}">
-												<Setter Property="TextColor" Value="{AppThemeBinding Light=DarkGreen, Dark=LightGreen}"/>
-											</DataTrigger>
-										</Label.Triggers>
-									</Label>
-									<Label Text="{Binding PercentCompleted,StringFormat='Percent Completed: {0:F2}%'}" FontSize="Micro" />
-									<Label Text="{Binding TotalSize, Converter={StaticResource FileSizeConverter}}" FontSize="Micro" />
-								</VerticalStackLayout>
-								<HorizontalStackLayout Spacing="10" Grid.Column="2">
-									<ImageButton BackgroundColor="Transparent" BorderWidth="0" Command="{Binding Source={x:Reference downloadsPage}, Path=BindingContext.CancelDownload}" CommandParameter="{Binding .}" ToolTipProperties.Text="Cancel Download" IsVisible="Collapse">
-										<ImageButton.Triggers>
-											<DataTrigger TargetType="ImageButton" Binding="{Binding Status}" Value="{x:Static model:FileDownloadStatuses.InProgress}">
-												<Setter Property="IsVisible" Value="Visible"/>
-											</DataTrigger>
-											<DataTrigger TargetType="ImageButton" Binding="{Binding Status}" Value="{x:Static model:FileDownloadStatuses.Paused}">
-												<Setter Property="IsVisible" Value="Visible"/>
-											</DataTrigger>
-											<DataTrigger TargetType="ImageButton" Binding="{Binding Status}" Value="{x:Static model:FileDownloadStatuses.Failed}">
-												<Setter Property="IsVisible" Value="Visible"/>
-											</DataTrigger>
-										</ImageButton.Triggers>
-										<ImageButton.Source>
-											<FontImageSource FontFamily="FAS" Size="18" Glyph="&#xf05e;" Color="DarkRed"/>
-										</ImageButton.Source>
-									</ImageButton>
-									<ImageButton BackgroundColor="Transparent" BorderWidth="0" Command="{Binding Source={x:Reference downloadsPage}, Path=BindingContext.ToggleDownloadStatus}" CommandParameter="{Binding .}" IsVisible="Collapse">
-										<ImageButton.Triggers>
-											<DataTrigger Binding="{Binding Status}" Value="{x:Static model:FileDownloadStatuses.InProgress}" TargetType="ImageButton">
-												<Setter Property="IsVisible" Value="Visible"/>
-												<Setter Property="ToolTipProperties.Text" Value="Pause Download"/>
-												<Setter Property="Source" Value="{StaticResource Key='PauseGlyph' }"/>
-											</DataTrigger>
-											<DataTrigger Binding="{Binding Status}" Value="{x:Static model:FileDownloadStatuses.Paused}" TargetType="ImageButton">
-												<Setter Property="IsVisible" Value="Visible"/>
-												<Setter Property="ToolTipProperties.Text" Value="Resume Download"/>
-												<Setter Property="Source" Value="{StaticResource Key='ResumeGlyph' }"/>
-											</DataTrigger>
-											<DataTrigger Binding="{Binding SupportsResume}" Value="True" TargetType="ImageButton">
-												<Setter Property="IsVisible" Value="Visible" />
-											</DataTrigger>
-										</ImageButton.Triggers>
-									</ImageButton>
-									<ImageButton BackgroundColor="Transparent" BorderWidth="0" Command="{Binding Source={x:Reference downloadsPage},Path=BindingContext.OpenFileCommand}" CommandParameter="{Binding .}" ToolTipProperties.Text="Open" IsVisible="Collapse">
-										<ImageButton.Source>
-											<FontImageSource FontFamily="FAS" Glyph="&#xf07c;" Size="18" Color="{DynamicResource PrimaryColor}" />
-										</ImageButton.Source>
-										<ImageButton.Triggers>
-											<DataTrigger Binding="{Binding Status}" Value="{x:Static model:FileDownloadStatuses.Completed}" TargetType="ImageButton">
-												<Setter Property="IsVisible" Value="Visible"/>
-											</DataTrigger>
-										</ImageButton.Triggers>
-									</ImageButton>
-									<ImageButton BackgroundColor="Transparent" BorderWidth="0" Command="{Binding Source={x:Reference downloadsPage}, Path=BindingContext.DeleteCommand}" CommandParameter="{Binding .}" ToolTipProperties.Text="Delete Download" IsVisible="Collapse">
-										<ImageButton.Source>
-											<FontImageSource FontFamily="FAS" Size="18" Glyph="&#xf1f8;" Color="{DynamicResource PrimaryColor}" />
-										</ImageButton.Source>
-										<ImageButton.Triggers>
-											<DataTrigger Binding="{Binding Status}" Value="{x:Static model:FileDownloadStatuses.Completed}" TargetType="ImageButton">
-												<Setter Property="IsVisible" Value="Visible"/>
-											</DataTrigger>
-										</ImageButton.Triggers>
-									</ImageButton>
-								</HorizontalStackLayout>
-								<BoxView Color="{DynamicResource PrimaryColor}" Grid.Row="1" Grid.ColumnSpan="3" HorizontalOptions="FillAndExpand" HeightRequest="1" Margin="10,0" />
-							</Grid>
-						</ViewCell>
-					</DataTemplate>
-				</ListView.ItemTemplate>
-			</ListView>
-		</ScrollView>
-		<Border x:Name="PreviewPane" BackgroundColor="Red" MinimumHeightRequest="450" MaximumHeightRequest="450" HeightRequest="450" IsVisible="False" toolkit:DockLayout.DockPosition="None">
-			<Label Text="Second Column Content" />
-		</Border>
-		<!--<VisualStateManager.VisualStateGroups>
-			<VisualStateGroup x:Name="WindowStates">
-				<VisualState x:Name="DefaultState">
-					<VisualState.StateTriggers>
-						<AdaptiveTrigger MinWindowWidth="801" MinWindowHeight="451" />
-					</VisualState.StateTriggers>
-					<VisualState.Setters>
-						<Setter Property="IsVisible" TargetName="PreviewPane" Value="False"/>
-						<Setter Property="toolkit:DockLayout.DockPosition" TargetName="PreviewPane" Value="None"/>
-					</VisualState.Setters>
-				</VisualState>
-				<VisualState x:Name="WindowWide">
-					<VisualState.StateTriggers>
-						<AdaptiveTrigger MinWindowWidth="1200"/>
-					</VisualState.StateTriggers>
-					<VisualState.Setters>
-						<Setter Property="toolkit:DockLayout.DockPosition" TargetName="PreviewPane" Value="Right" />
-						<Setter Property="IsVisible" TargetName="PreviewPane" Value="True"/>
-					</VisualState.Setters>
-				</VisualState>
-				<VisualState x:Name="WindowTall">
-					<VisualState.StateTriggers>
-						<AdaptiveTrigger MinWindowHeight="900"/>
-					</VisualState.StateTriggers>
-					<VisualState.Setters>
-						<Setter Property="toolkit:DockLayout.DockPosition" TargetName="PreviewPane" Value="Bottom"/>
-						<Setter Property="IsVisible" TargetName="PreviewPane" Value="True"/>
-					</VisualState.Setters>
-				</VisualState>
-				<VisualState x:Name="WindowWideAndTall">
-					<VisualState.StateTriggers>
-						<AdaptiveTrigger MinWindowHeight="901" MinWindowWidth="1000"/>
-					</VisualState.StateTriggers>
-					<VisualState.Setters>
-						<Setter Property="toolkit:DockLayout.DockPosition" TargetName="PreviewPane" Value="Bottom"/>
-						<Setter Property="IsVisible" TargetName="PreviewPane" Value="True"/>
-					</VisualState.Setters>
-				</VisualState>
-			</VisualStateGroup>
-		</VisualStateManager.VisualStateGroups>-->
-	</toolkit:DockLayout>
+	<ScrollView BackgroundColor="Transparent" x:Name="DownloadsList" HorizontalOptions="StartAndExpand" VerticalOptions="StartAndExpand">
+		<CollectionView ItemsSource="{Binding Downloads}" BackgroundColor="Transparent" SelectionMode="None" HorizontalOptions="StartAndExpand" ItemsLayout="VerticalList">
+			<CollectionView.EmptyViewTemplate>
+				<DataTemplate>
+					<Label Text="No Items to Display"/>
+				</DataTemplate>
+			</CollectionView.EmptyViewTemplate>
+			<CollectionView.ItemTemplate>
+				<DataTemplate x:DataType="model:Download">
+					<Grid RowSpacing="16" ColumnSpacing="16" Padding="16">
+						<Grid.Behaviors>
+							<toolkit:AnimationBehavior>
+								<toolkit:AnimationBehavior.AnimationType>
+									<toolkit:FadeAnimation/>
+								</toolkit:AnimationBehavior.AnimationType>
+							</toolkit:AnimationBehavior>
+						</Grid.Behaviors>
+						<Grid.RowDefinitions>
+							<RowDefinition Height="Auto" />
+							<RowDefinition Height="*" />
+							<RowDefinition Height="Auto" />
+						</Grid.RowDefinitions>
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition Width="Auto"/>
+							<ColumnDefinition Width="*" />
+							<ColumnDefinition Width="Auto"/>
+						</Grid.ColumnDefinitions>
+						<Image Grid.Column="0" Source="{StaticResource Key=FileGenericGlph}">
+							<Image.Triggers>
+								<DataTrigger Binding="{Binding Type}" TargetType="Image" Value="audio">
+									<Setter Property="Source" Value="{StaticResource Key='FileAudioGlyph'}" />
+								</DataTrigger>
+								<DataTrigger Binding="{Binding Type}" TargetType="Image" Value="image">
+									<Setter Property="Source" Value="{StaticResource Key=FileImageGlyph}" />
+								</DataTrigger>
+								<DataTrigger Binding="{Binding Type}" TargetType="Image" Value="video">
+									<Setter Property="Source" Value="{StaticResource Key=FileVideoGlyph}" />
+								</DataTrigger>
+								<DataTrigger Binding="{Binding Type}" TargetType="Image" Value="text">
+									<Setter Property="Source" Value="{StaticResource Key=FileTextGlyph}" />
+								</DataTrigger>
+							</Image.Triggers>
+						</Image>
+						<VerticalStackLayout Grid.Column="1" HorizontalOptions="Start">
+							<Label Text="{Binding FileName}" FontSize="Small" />
+							<Label Text="{Binding Status, Converter={StaticResource StatusConverter}, StringFormat='Status: {0}'}" FontSize="Micro">
+								<Label.Triggers>
+									<DataTrigger TargetType="Label" Binding="{Binding Status}" Value="{x:Static model:FileDownloadStatuses.Failed}">
+										<Setter Property="TextColor" Value="{AppThemeBinding Light=DarkRed, Dark=Red}"/>
+									</DataTrigger>
+									<DataTrigger TargetType="Label" Binding="{Binding Status}" Value="{x:Static model:FileDownloadStatuses.Completed}">
+										<Setter Property="TextColor" Value="{AppThemeBinding Light=DarkGreen, Dark=LightGreen}"/>
+									</DataTrigger>
+								</Label.Triggers>
+							</Label>
+							<Label Text="{Binding PercentCompleted,StringFormat='Percent Completed: {0:F2}%'}" FontSize="Micro" />
+							<Label Text="{Binding TotalSize, Converter={StaticResource FileSizeConverter}}" FontSize="Micro" />
+						</VerticalStackLayout>
+						<HorizontalStackLayout Spacing="10" Grid.Column="2">
+							<ImageButton BackgroundColor="Transparent" BorderWidth="0" Command="{Binding Source={x:Reference downloadsPage}, Path=BindingContext.CancelDownload}" CommandParameter="{Binding .}" ToolTipProperties.Text="Cancel Download" IsVisible="Collapse">
+								<ImageButton.Triggers>
+									<DataTrigger TargetType="ImageButton" Binding="{Binding Status}" Value="{x:Static model:FileDownloadStatuses.InProgress}">
+										<Setter Property="IsVisible" Value="Visible"/>
+									</DataTrigger>
+									<DataTrigger TargetType="ImageButton" Binding="{Binding Status}" Value="{x:Static model:FileDownloadStatuses.Paused}">
+										<Setter Property="IsVisible" Value="Visible"/>
+									</DataTrigger>
+									<DataTrigger TargetType="ImageButton" Binding="{Binding Status}" Value="{x:Static model:FileDownloadStatuses.Failed}">
+										<Setter Property="IsVisible" Value="Visible"/>
+									</DataTrigger>
+								</ImageButton.Triggers>
+								<ImageButton.Source>
+									<FontImageSource FontFamily="FAS" Size="18" Glyph="&#xf05e;" Color="DarkRed"/>
+								</ImageButton.Source>
+							</ImageButton>
+							<ImageButton BackgroundColor="Transparent" BorderWidth="0" Command="{Binding Source={x:Reference downloadsPage}, Path=BindingContext.ToggleDownloadStatus}" CommandParameter="{Binding .}" IsVisible="Collapse">
+								<ImageButton.Triggers>
+									<DataTrigger Binding="{Binding Status}" Value="{x:Static model:FileDownloadStatuses.InProgress}" TargetType="ImageButton">
+										<Setter Property="IsVisible" Value="Visible"/>
+										<Setter Property="ToolTipProperties.Text" Value="Pause Download"/>
+										<Setter Property="Source" Value="{StaticResource Key='PauseGlyph' }"/>
+									</DataTrigger>
+									<DataTrigger Binding="{Binding Status}" Value="{x:Static model:FileDownloadStatuses.Paused}" TargetType="ImageButton">
+										<Setter Property="IsVisible" Value="Visible"/>
+										<Setter Property="ToolTipProperties.Text" Value="Resume Download"/>
+										<Setter Property="Source" Value="{StaticResource Key='ResumeGlyph' }"/>
+									</DataTrigger>
+									<DataTrigger Binding="{Binding SupportsResume}" Value="True" TargetType="ImageButton">
+										<Setter Property="IsVisible" Value="Visible" />
+									</DataTrigger>
+								</ImageButton.Triggers>
+							</ImageButton>
+							<ImageButton BackgroundColor="Transparent" BorderWidth="0" Command="{Binding Source={x:Reference downloadsPage},Path=BindingContext.OpenFileCommand}" CommandParameter="{Binding .}" ToolTipProperties.Text="Open" IsVisible="Collapse">
+								<ImageButton.Source>
+									<FontImageSource FontFamily="FAS" Glyph="&#xf07c;" Size="18" Color="{DynamicResource PrimaryColor}" />
+								</ImageButton.Source>
+								<ImageButton.Triggers>
+									<DataTrigger Binding="{Binding Status}" Value="{x:Static model:FileDownloadStatuses.Completed}" TargetType="ImageButton">
+										<Setter Property="IsVisible" Value="Visible"/>
+									</DataTrigger>
+								</ImageButton.Triggers>
+							</ImageButton>
+							<ImageButton BackgroundColor="Transparent" BorderWidth="0" Command="{Binding Source={x:Reference downloadsPage}, Path=BindingContext.DeleteCommand}" CommandParameter="{Binding .}" ToolTipProperties.Text="Delete Download" IsVisible="Collapse">
+								<ImageButton.Source>
+									<FontImageSource FontFamily="FAS" Size="18" Glyph="&#xf1f8;" Color="{DynamicResource PrimaryColor}" />
+								</ImageButton.Source>
+								<ImageButton.Triggers>
+									<DataTrigger Binding="{Binding Status}" Value="{x:Static model:FileDownloadStatuses.Completed}" TargetType="ImageButton">
+										<Setter Property="IsVisible" Value="Visible"/>
+									</DataTrigger>
+								</ImageButton.Triggers>
+							</ImageButton>
+						</HorizontalStackLayout>
+						<BoxView Color="{DynamicResource PrimaryColor}" Grid.Row="1" Grid.ColumnSpan="3" HorizontalOptions="FillAndExpand" HeightRequest="1" Margin="10,0" />
+					</Grid>
+				</DataTemplate>
+			</CollectionView.ItemTemplate>
+		</CollectionView>
+	</ScrollView>
 </ContentPage>
