Downloads Folder Picked correctly for windows and android. Max Concurrent download parts now in settings. Bool to Yes/No Converter.

--- a/FileFlux/Pages/NewDownloadPage.xaml
+++ b/FileFlux/Pages/NewDownloadPage.xaml
@@ -12,6 +12,7 @@
 			 Title="New Download - FileFlux">
 	<ContentPage.Resources>
 		<local:FileSizeConverter x:Key="FileSizeConverter" />
+		<local:YesNoBoolConverter x:Key="YesNoConverter" />
 	</ContentPage.Resources>
 
 	<Grid ColumnSpacing="10" RowSpacing="10" Padding="10">
@@ -49,7 +50,7 @@
 				<Label Text="{Binding FileDownload.FileName, StringFormat='File Name: {0}', TargetNullValue='Filename: unknown'}" FontSize="Small"/>
 				<Label Text="{Binding FileDownload.ContentType, StringFormat='Type: {0}'}" FontSize="Micro"/>
 				<Label Text="{Binding FileDownload.TotalSize, Converter={StaticResource FileSizeConverter}, StringFormat='Size: {0}'}" FontSize="Micro" />
-				<Label Text="{Binding FileDownload.SupportsResume, StringFormat='Supports Resume: {0}'}" FontSize="Micro">
+				<Label Text="{Binding FileDownload.SupportsResume, Converter={StaticResource YesNoConverter}, StringFormat='Supports Resume: {0}'}" FontSize="Micro">
 					<Label.Triggers>
 						<DataTrigger TargetType="Label" Binding="{Binding FileDownload.SupportsResume}" Value="False">
 							<Setter Property="TextColor" Value="Orange"/>
